# rsketch

./: .actrc  .depupdate.toml  .dockerignore  .editorconfig  .gitignore  .golangci.yml  .opencommitignore  .rust.instructions.md  .yamllint  404.html  AGENT.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  Vagrantfile  api-guide.html  buf-integration.html  build.rs  cliff.toml  clippy.toml  codecov.yml  deny.toml  devbox.json  env.local.example  index.html  introduction.html  justfile  licenserc.toml  mermaid-304345dd.min.js  mermaid-init-b473023b.js  opentelemetry.html  oranda.toml  print.html  release-plz.toml  rustfmt.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-eff35291.js  (+4 more)
api/: CHANGELOG.md  Cargo.toml  README.md  buf.gen.c.yaml  buf.gen.cpp.yaml  buf.gen.go.yaml  buf.gen.java.yaml  buf.gen.yaml  buf.yaml  build.rs
api/proto/hello/v1/: hello.proto
api/src/: lib.rs
components/server/: Cargo.toml
components/server/src/: main.rs  settings.rs  setup.rs
components/server/src/tcp/: mod.rs
crates/api/: Cargo.toml  build.rs
crates/api/proto/hello/v1/: hello.proto
crates/api/src/: lib.rs
crates/app/: CHANGELOG.md  Cargo.toml
crates/app/src/: lib.rs
crates/cmd/: CHANGELOG.md  Cargo.toml  build.rs
crates/cmd/src/: build_info.rs  main.rs
crates/cmd/wix/: main.wxs
crates/common/: Cargo.toml
crates/common/base/: CHANGELOG.md  Cargo.toml
crates/common/base/src/: env.rs  lib.rs  readable_size.rs
crates/common/error/: CHANGELOG.md  Cargo.toml
crates/common/error/src/: lib.rs
crates/common/runtime/: CHANGELOG.md  Cargo.toml
crates/common/runtime/src/: factory.rs  global.rs  lib.rs  options.rs
crates/common/src/: error.rs  lib.rs  readable_size.rs  runtime.rs
crates/common/src/telemetry/: logging.rs  mod.rs  tracing_context.rs  tracing_sampler.rs
crates/common/storage/queue/: CHANGELOG.md  Cargo.toml  README.md
crates/common/storage/queue/benches/: queue_benchmark.rs
crates/common/storage/queue/src/: appender.rs  builder.rs  config.rs  crc.rs  error.rs  file.rs  index.rs  io_worker.rs  lib.rs  manifest.rs  manifest_writer.rs  message.rs  path.rs  queue.rs  recovery.rs  tailer.rs
crates/common/storage/queue/tests/: integration_test.rs
crates/common/telemetry/: CHANGELOG.md  Cargo.toml
crates/common/telemetry/src/: lib.rs  logging.rs  panic_hook.rs  tracing_context.rs  tracing_sampler.rs
crates/common/util/: Cargo.toml  justfile
crates/common/util/src/: crashes.rs  ensure_single_instance.rs  lib.rs  version.rs
crates/common/utils/downloader/: CHANGELOG.md  Cargo.toml
crates/common/utils/downloader/src/: cache_manager.rs  chunk_downloader.rs  chunk_merger.rs  config.rs  downloader.rs  error.rs  file_info.rs  lib.rs  parallel_manager.rs  single_downloader.rs  state_manager.rs  types.rs
crates/common/utils/downloader/tests/: integration_test.rs
crates/common/worker/: CHANGELOG.md  Cargo.toml
crates/common/worker/examples/: basic.rs
crates/common/worker/src/: blocking.rs  builder.rs  config.rs  context.rs  driver.rs  err.rs  handle.rs  id.rs  lib.rs  manager.rs  metrics.rs  trigger.rs  worker.rs
crates/common/worker/tests/: integration.rs  integration_test.rs
crates/desktop/yunara/: Cargo.toml  README.md  build.rs  justfile
crates/desktop/yunara-assets/: Cargo.toml
crates/desktop/yunara-assets/src/: lib.rs
crates/desktop/yunara-paths/: Cargo.toml
crates/desktop/yunara-paths/src/: lib.rs
crates/desktop/yunara-player/: AGENTS.md  Cargo.toml  README.md
crates/desktop/yunara-player/src/: actions.rs  app_state.rs  client.rs  consts.rs  lib.rs  player_bar.rs  sidebar.rs  util.rs  yunara_player.rs
crates/desktop/yunara-player/src/dock/: dock.rs  dock_position.rs  mod.rs
crates/desktop/yunara-player/src/dock/panels/: library_panel.rs  mod.rs  queue_panel.rs
crates/desktop/yunara-player/src/pane/: mod.rs  pane.rs  pane_group.rs  pane_item.rs
crates/desktop/yunara-player/src/pane/items/: explore_view.rs  home_view.rs  library_view.rs  mod.rs  playlist_view.rs
crates/desktop/yunara-player/src/services/: mod.rs  playlist_service.rs  user_service.rs
crates/desktop/yunara-player/src/state/: app_view.rs  mod.rs  player_state.rs
crates/desktop/yunara-player/src/ytapi/: client.rs  err.rs  mod.rs
crates/desktop/yunara-store/: Cargo.toml  justfile
crates/desktop/yunara-store/migrations/: 20260127000000_init.sql
crates/desktop/yunara-store/src/: config.rs  db.rs  err.rs  kv.rs  lib.rs
crates/desktop/yunara-ui/: Cargo.toml
crates/desktop/yunara-ui/src/: lib.rs
crates/desktop/yunara-ui/src/components/: mod.rs
crates/desktop/yunara-ui/src/components/layout/: app_shell.rs  content_area.rs  header.rs  mod.rs  queue_panel.rs  sidebar.rs
crates/desktop/yunara-ui/src/components/media/: cover_mosaic.rs  mod.rs  playlist_item.rs  track_item.rs
crates/desktop/yunara-ui/src/components/player/: mod.rs  playback_controls.rs  player_bar.rs  progress_slider.rs  volume_control.rs
crates/desktop/yunara-ui/src/components/playlist/: mod.rs  playlist_detail.rs
crates/desktop/yunara-ui/src/components/progress/: mod.rs
crates/desktop/yunara-ui/src/components/theme/: mod.rs  theme_config.rs  theme_provider.rs
crates/desktop/yunara-ui/src/models/: mod.rs  navigation.rs  playlist.rs  track.rs
crates/desktop/yunara-ui/src/styles/: color.rs  mod.rs
crates/desktop/yunara/src/: config.rs  consts.rs  helper.rs  main.rs
crates/gui/: Cargo.toml
crates/gui/src/: err.rs  main.rs
crates/macos/vz/: Cargo.toml
crates/macos/vz/src/: lib.rs
crates/paths/: CHANGELOG.md  Cargo.toml
crates/paths/src/: lib.rs
crates/server/: CHANGELOG.md  Cargo.toml
crates/server/src/: error.rs  grpc.rs  http.rs  lib.rs
crates/server/src/grpc/: hello.rs
examples/: Cargo.toml  README.md  health_service_example.rs  hello-server.rs  hello_world.rs  justfile
examples/goclient/: go.mod  main.go
src/api/: Cargo.toml  build.rs
src/api/proto/v1/hello/: hello.proto
src/api/src/: lib.rs
src/common/: CHANGELOG.md  Cargo.toml
src/common/src/: env.rs  error.rs  lib.rs  logger.rs  sentry_init.rs
(+100 files in other folders)
