[workspace.package]
version = "0.0.9"
edition = "2024"
license = "Apache-2.0"
authors = ["crrow"]
repository = "https://github.com/crrow/rsketch"
homepage = "https://github.com/crrow/rsketch"
readme = "README.md"
keywords = ["rust", "template", "server"]
categories = ["development-tools"]

[workspace.lints.rust]
unsafe_code = "deny"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
future_not_send = "allow"
missing_errors_doc = "allow"

[workspace]
resolver = "3"
members = [
    "api",
    "crates/app",
    "crates/cmd",
    "crates/common/base",
    "crates/common/error",
    "crates/common/runtime",
    "crates/common/storage/queue",
    "crates/common/telemetry",
    "crates/common/worker",
    "crates/server",
]

[workspace.dependencies]
async-trait = "^0.1"
axum = "^0.8"
axum-tracing-opentelemetry = "0.32.0"
bon = "^3.6"
bytes = "^1.11"
chrono = "^0.4"
derive_more = { version = "2.0", features = ["full"] }
futures = "^0.3"
http = "^1"
lazy_static = "^1.4"
once_cell = "^1.20"
prometheus = "^0.14"
prost = "^0.14"
protobuf = "^3.7"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.143"
smart-default = "0.7"
snafu = "^0.8"
strum = "^0.27"
strum_macros = "^0.27"
tokio = { version = "^1.45", features = ["full", "tracing"] }
tokio-util = "^0.7"
tonic = "^0.14"
tonic-build = "^0.14"
tonic-health = "^0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "^0.14"
tonic-tracing-opentelemetry = "0.32.0"
tonic-web = "^0.14"
tower = "^0.5"
tower-http = { version = "^0.6", features = ["cors"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
validator = "0.20"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# Where to host releases
hosting = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Use custom release notes generated by git-cliff
release-notes = "RELEASE_NOTES.md"
# Allow custom modifications to release.yml
allow-dirty = ["ci"]
# Use Linux runners for all targets (cargo-zigbuild will handle cross-compilation)
[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "ubuntu-latest"
x86_64-apple-darwin = "ubuntu-latest"
x86_64-unknown-linux-musl = "ubuntu-latest"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
