[workspace.package]
version = "0.0.17"
edition = "2024"
license = "Apache-2.0"
authors = ["crrow"]
repository = "https://github.com/crrow/rsketch"
homepage = "https://github.com/crrow/rsketch"
readme = "README.md"
keywords = ["rust", "template", "server"]
categories = ["development-tools"]

[workspace.lints.rust]
unsafe_code = "deny"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
future_not_send = "allow"
missing_errors_doc = "allow"

[workspace]
resolver = "3"
members = [
    "api",
    "crates/app",
    "crates/cmd",
    "crates/common/base",
    "crates/common/error",
    "crates/common/runtime",
    "crates/common/storage/queue",
    "crates/common/telemetry",
    "crates/common/util",
    "crates/common/worker",
    "crates/desktop/yunara-assets",
    "crates/desktop/yunara-paths",
    "crates/desktop/yunara",
    # "crates/macos/vz",
    "crates/server",
    "crates/desktop/yunara-store",
    "crates/desktop/yunara-ui",
    "crates/desktop/yunara-player",
]

[workspace.dependencies]
anyhow = "^1.0"
async-trait = "^0.1"
async_cell = "^0.2"
axum = "^0.8"
axum-tracing-opentelemetry = "0.33.0"
bincode = "^2.0"
bon = "^3.6"
bytes = "^1.11"
chrono = "^0.4"
derive_more = { version = "2.0", features = ["full"] }
dirs = "^6.0"
futures = "^0.3"
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", branch = "main" }
gpui_tokio = { git = "https://github.com/zed-industries/zed", package = "gpui_tokio" }
http = "^1"
http_client = { git = "https://github.com/zed-industries/zed", package = "http_client" }
reqwest_client = { git = "https://github.com/zed-industries/zed", package = "reqwest_client" }
jiff = "^0.2"
lazy_static = "^1.4"
notify = "^8.2"
num_enum = "^0.7"
once_cell = "^1.20"
prometheus = "^0.14"
prost = "^0.14"
protobuf = "^3.7"
reqwest = "^0.13"
rust-embed = "^8.11"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.143"
smart-default = "0.7"
snafu = "^0.8"
strum = "^0.27"
strum_macros = "^0.27"
tokio = { version = "^1.45", features = ["full", "tracing"] }
tokio-util = "^0.7"
tonic = "^0.14"
tonic-build = "^0.14"
tonic-health = "^0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "^0.14"
tonic-tracing-opentelemetry = "0.32.0"
tonic-web = "^0.14"
tower = "^0.5"
tower-http = { version = "^0.6", features = ["cors"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
uuid = "^1.20"
validator = "^0.20"
zstd = "^0.13"

# Internal workspace crates (use =version to keep in sync with workspace version)
rsketch-api = { path = "api" }
rsketch-app = { path = "crates/app" }
rsketch-base = { path = "crates/common/base" }
rsketch-cmd = { path = "crates/cmd" }
rsketch-common-crash = { path = "crates/common/crash" }
rsketch-common-runtime = { path = "crates/common/runtime" }
rsketch-common-telemetry = { path = "crates/common/telemetry" }
rsketch-common-util = { path = "crates/common/util" }
rsketch-common-worker = { path = "crates/common/worker" }
rsketch-error = { path = "crates/common/error" }
rsketch-server = { path = "crates/server" }
yunara-assets = { path = "crates/desktop/yunara-assets" }
yunara-paths = { path = "crates/desktop/yunara-paths" }
yunara-player = { path = "crates/desktop/yunara-player" }
yunara-store = { path = "crates/desktop/yunara-store" }
yunara-ui = { path = "crates/desktop/yunara-ui" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# Where to host releases
hosting = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Use custom release notes generated by git-cliff
release-notes = "RELEASE_NOTES.md"
# Skip checking whether the specified configuration files are up to date
# (we use ubuntu-latest instead of ubuntu-20.04 which cargo-dist wants)
allow-dirty = ["ci"]
# A GitHub repo to push Homebrew formulas to
tap = "crrow/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Use appropriate runners for each target
[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-latest"
x86_64-unknown-linux-gnu = "ubuntu-latest"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
