[package]
name = "rsketch-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello-server"
path = "hello-server.rs"

[dependencies]
rsketch-api = { path = "../api" }
rsketch-server = { path = "../crates/server" }
tokio = { version = "1", features = ["full"] }
tonic = { workspace = true }