[package]
name = "rsketch-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bon = { workspace = true }
derive_more = { workspace = true }
rsketch-common = { path = "../common" }
rsketch-server = { path = "../server" }
smart-default = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
