[package]
name = "rsketch-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Application orchestration and lifecycle management for rsketch"

[dependencies]
bon = { workspace = true }
derive_more = { workspace = true }
rsketch-common-telemetry = { path = "../common/telemetry" }
rsketch-server = { path = "../server" }
smart-default = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
