[package]
name = "rsketch-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Application orchestration and lifecycle management for rsketch"

[dependencies]
bon = { workspace = true }
derive_more = { workspace = true }
rsketch-common-telemetry = { workspace = true }
rsketch-server = { workspace = true }
smart-default = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
