[package]
name = "rsketch-cmd"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
const_format = "0.2.32"
ctrlc = "3.4.2"
human-panic = "2.0.0"
snafu.workspace = true

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
const_format = "0.2.32"
