[package]
name = "rsketch-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
