[package]
name = "rsketch-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
