[package]
name = "rsketch-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio-console = ["console-subscriber", "tokio/tracing"]
deadlock_detection = ["parking_lot/deadlock_detection"]

[dependencies]
backtrace = "0.3"
bon = { workspace = true }
console-subscriber = { version = "0.1", optional = true }
derive_more = { workspace = true }
dotenvy = "0.15.7"
humantime-serde = "1.1"
lazy_static = "1.4"
once_cell = "1.19"
opentelemetry = { version = "0.30.0", default-features = false, features = [
    "trace",
] }
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "trace"] }
parking_lot = { version = "0.12", optional = true }
prometheus = { version = "0.14", features = ["process"] }
serde.workspace = true
serde_json = "1.0"
smart-default = { workspace = true }
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-log = "0.2"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
