[package]
name = "gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.100"
core-text = "=21.0.0"
gpui = "0.2.2"
gpui-component = "0.5.0"
snafu.workspace = true

[lints]
workspace = true
