[package]
name = "rsketch-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bon = { workspace = true }
defer = { workspace = true }
# fastrace = { workspace = true }
futures = { workspace = true }
rsketch-common = { path = "../common" }
rsketch-api = { path = "../api" }
serde = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-web = { workspace = true }
tonic-reflection = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }