[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.0"
serde.workspace = true
strum = "0.26.2"
strum_macros = "0.26.2"
tonic = "0.12.0"

[build-dependencies]
tonic-build = "0.12.0"
