[package]
name = "rsketch-error"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
http = { workspace = true }
serde = { workspace = true }
snafu.workspace = true
strum = { workspace = true }
strum_macros = { workspace = true }
tonic = { workspace = true }
