[package]
name = "rsketch-common-util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["release-dev"]
release-dev = []
release-preview = []
release-stable = []

[dependencies]
bon.workspace = true
crash-handler = "^0.7"
derive_more.workspace = true
minidumper = "^0.9"
serde.workspace = true
serde_json.workspace = true
sysinfo = "^0.38"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "^0.3"
zstd.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "^0.6"
