[package]
name = "rsketch-common-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
chrono = "0.4"
croner = "2"
lazy_static.workspace = true
prometheus.workspace = true
rsketch-common-runtime = { path = "../runtime" }
smart-default = "0.7"
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = "0.3"
