[package]
name = "yunara-assets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
rust-embed.workspace = true

[lints]
workspace = true
