[package]
name = "yunara-player"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/yunara_player.rs"

[dependencies]
anyhow.workspace = true
bon.workspace = true
futures.workspace = true
gpui.workspace = true
gpui-component = "0.5.0"
gpui_tokio.workspace = true
jiff.workspace = true
reqwest.workspace = true
snafu.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
yunara-assets.workspace = true
yunara-paths.workspace = true
yunara-store.workspace = true
yunara-ui.workspace = true

[lints]
workspace = true
