[package]
name = "yunara-player"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async_cell.workspace = true
bon.workspace = true
derive_more.workspace = true
dirs.workspace = true
futures.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui_tokio.workspace = true
jiff.workspace = true
num_enum.workspace = true
parking_lot = "0.12"
reqwest.workspace = true
rsketch-common-telemetry.workspace = true
rusty_ytdl = "^0.7"
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
ytmapi-rs = { git = "https://github.com/nick42d/youtui", package = "ytmapi-rs", features = ["reqwest", "rustls-tls"] }
yunara-assets.workspace = true
yunara-paths.workspace = true
yunara-store.workspace = true
yunara-ui.workspace = true

[lints]
workspace = true
