[package]
name = "yunara-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.0"
tokio.workspace = true
