[package]
name = "yunara-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bon.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default = "0.7"
snafu.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
tokio.workspace = true
