[package]
name = "yunara-ui"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bon.workspace = true
futures.workspace = true
gpui.workspace = true
gpui-component.workspace = true
tracing.workspace = true

[lints]
workspace = true
